// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphicsResult.vue renders re-renders after charts data changes 1`] = `
<div class="graphics-results">
  <div class="graphics-results__wrapper">
    <h2 class="graphics-results__title">
      Evaluate output
      <!---->
    </h2>
    <p>
      For more information about test results, see our <a href="">documentation here</a>.
    </p>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        Precision and recall reports
      </h3>
      <p>
        A perfect precision score of 1.0 means that every test
        result was positive (but says nothing about whether all
        positive results were retrieved) whereas a perfect
        recall score of 1.0 means that all positive results
        were retrieved by the search (but says nothing about
        how many false positives were also retrieved).
      </p>
      <p>
        Read more about in
        <a href="">our documentation</a>.
      </p>
    </div>
    <div>
      <h5 class="graphics-results__title">
        Intent report
      </h5>
      <!----> <canvas id="intentsChart" class="graphics-results__charts"></canvas>
    </div>
    <div>
      <h5 class="graphics-results__title">
        Entities
      </h5>
      <!----> <canvas id="entitiesChart" class="graphics-results__charts"></canvas>
    </div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        Intent confusion matrix
      </h3>
      <p>
        The confusion matrix shows you which intents
        are mistaken for others. Read more about it in
        <a href="">our documentation</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <div class="graphics-results__charts__loading">
        <bh-loading-stub></bh-loading-stub>
      </div>
      <!---->
    </div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        Intent confidence distribution
      </h3>
      <p>
        The histogram allows you to visualize the
        confidence distribution for all predictions, with the volume of
        correct and incorrect predictions being displayed by green and red bars respectively.
        Improving the quality of your training data will move the
        green histogram bars to the right and
        the red histogram bars to the left of the plot.
      </p>
      <p>Read more about it in
        <a href="">our documentation</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <div class="graphics-results__charts__loading">
        <bh-loading-stub></bh-loading-stub>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`GraphicsResult.vue renders renders 1`] = `
<div class="graphics-results">
  <div class="graphics-results__wrapper">
    <h2 class="graphics-results__title">
      Evaluate output
      <!---->
    </h2>
    <p>
      For more information about test results, see our <a href="">documentation here</a>.
    </p>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        Precision and recall reports
      </h3>
      <p>
        A perfect precision score of 1.0 means that every test
        result was positive (but says nothing about whether all
        positive results were retrieved) whereas a perfect
        recall score of 1.0 means that all positive results
        were retrieved by the search (but says nothing about
        how many false positives were also retrieved).
      </p>
      <p>
        Read more about in
        <a href="">our documentation</a>.
      </p>
    </div>
    <div>
      <h5 class="graphics-results__title">
        Intent report
      </h5>
      <div class="graphics-results__charts__loading">
        <bh-loading-stub></bh-loading-stub>
      </div> <canvas id="intentsChart" class="graphics-results__charts"></canvas>
    </div>
    <div>
      <h5 class="graphics-results__title">
        Entities
      </h5>
      <div class="graphics-results__charts__loading">
        <bh-loading-stub></bh-loading-stub>
      </div> <canvas id="entitiesChart" class="graphics-results__charts"></canvas>
    </div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        Intent confusion matrix
      </h3>
      <p>
        The confusion matrix shows you which intents
        are mistaken for others. Read more about it in
        <a href="">our documentation</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <!----> <img src="https://s3.amazonaws.com/bothub-sample/confmat.png" alt="chart1"></div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        Intent confidence distribution
      </h3>
      <p>
        The histogram allows you to visualize the
        confidence distribution for all predictions, with the volume of
        correct and incorrect predictions being displayed by green and red bars respectively.
        Improving the quality of your training data will move the
        green histogram bars to the right and
        the red histogram bars to the left of the plot.
      </p>
      <p>Read more about it in
        <a href="">our documentation</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <!----> <img src="https://s3.amazonaws.com/bothub-sample/hist.png" alt="chart2"></div>
  </div>
</div>
`;
